<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/darkBlue"
    tools:context=".activities.LaunchActivity">

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/ic_main_logo"/>

    <Button
        android:id="@+id/createWalletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_wallet"
        style="@style/PrimaryButtonStyle"
        android:layout_above="@id/recoverWalletButton"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/recoverWalletButton"
        android:text="@string/recover_wallet"
        style="@style/SecondaryButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>