<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.CreateWalletActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="@string/secret_phrase"
        app:titleTextColor="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/warningPhraseTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:text="@string/phrase_warning"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"/>

    <blockeq.com.stellarwallet.reusables.views.MnemonicView
        android:id="@+id/mnemonicView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/warningPhraseTextView" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_written"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginBottom="10dp"
        style="@style/PrimaryButtonStyle"
        android:background="@color/blue2"/>

</RelativeLayout>